--- a/TODO-App/public/index.html
+++ b/TODO-App/public/index.html
@@ -3,17 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="index.css">
-    <link rel="stylesheet" href="index.js">
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <script src="script.js" type="text/javascript"></script>
     <title>Todo App</title>
 </head>
 <body>
    <div id="main">
-    <div id="sidepanel">
-
+    <div id="left-sidepanel">
+    <div id="topbar"></div> 
     </div>
     <div id="body">
-        <div id="topbar"></div> 
+        <div id="main-content">
+            <div id="created"></div>
+            <div id="working"></div>
+            <div id="completed"></div>
+        </div>
+        <div id="right-sidepanel"></div>
     </div>
    </div> 
 </body>
