--- a/TODO-App/public/index.html
+++ b/TODO-App/public/index.html
@@ -9,16 +9,15 @@
 </head>
 <body>
    <div id="main">
-    <div id="left-sidepanel">
-    <div id="topbar"></div> 
-    </div>
+    <div id="left-sidepanel">hi</div>
+    <div id="topbar">h</div>
     <div id="body">
         <div id="main-content">
-            <div id="created"></div>
-            <div id="working"></div>
-            <div id="completed"></div>
+            <div id="created">a</div>
+            <div id="working">d</div>
+            <div id="completed">s</div>
         </div>
-        <div id="right-sidepanel"></div>
+        <div id="right-sidepanel">sd</div>
     </div>
    </div> 
 </body>
